Bug 462297 - New session doesn't add default name
Summary: New session doesn't add default name
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: UI: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-27 05:43 UTC by infiniteverma
Modified: 2024-01-16 19:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14
Sentry Crash Report:


Attachments
Screenshot (22.61 KB, image/png)
2022-11-27 05:43 UTC, infiniteverma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description infiniteverma 2022-11-27 05:43:43 UTC
Created attachment 154073 [details]
Screenshot

SUMMARY

Creating a new session in kdevelop adds it to the list on Session dropdown but without a default name which looks string. See attached screenshot for details.

STEPS TO REPRODUCE
1. Create new session
2. Open "Session" from top bar and view your new session

OBSERVED RESULT
New session created without name

EXPECTED RESULT
Maybe add default session name as "New Session".

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-01-04 23:17:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/kdevelop/kdevelop/-/merge_requests/526
Comment 2 Igor Kushnir 2024-01-16 19:00:30 UTC
Git commit 63ea448e9a3b0b73e90d90a26dab5cb5fe78145c by Igor Kushnir, on behalf of Denis Biryukov.
Committed on 16/01/2024 at 19:24.
Pushed by igorkushnir into branch 'master'.

Add default name "(no projects)" to newly created session
FIXED-IN: 5.14

M  +1    -1    kdevplatform/shell/session.cpp

https://invent.kde.org/kdevelop/kdevelop/-/commit/63ea448e9a3b0b73e90d90a26dab5cb5fe78145c
Comment 3 Igor Kushnir 2024-01-16 19:00:31 UTC
Git commit 0562fe27572f9838e2b96171662f0f0eff59d358 by Igor Kushnir, on behalf of Denis Biryukov.
Committed on 16/01/2024 at 19:24.
Pushed by igorkushnir into branch 'master'.

Add new menu action to create named session
FIXED-IN: 5.14

M  +2    -1    kdevplatform/shell/kdevsessionui.rc
M  +25   -1    kdevplatform/shell/sessioncontroller.cpp

https://invent.kde.org/kdevelop/kdevelop/-/commit/0562fe27572f9838e2b96171662f0f0eff59d358