Add default name "(no projects)" to newly created session

BUG: 462297
FIXED-IN: 5.14